--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vcl"]
 	path = fastfuncs/include/vcl
-	url = git@github.com:vectorclass/version2.git
+	url = git@github.com:vlovero/version2.git
